2006-11-01  Jonathan Pryor  <jonpryor@vt.edu>

	* stdio.c: Some BSDs define clearerr(3) as a macro, so we need to cast
	  `stream' to a `FILE*' to avoid derefing a `void*'.
	* sys-statvfs.c: Build fix to support OS X 10.3.9 & systems w/o statvfs(2).

2006-11-01  Jonathan Pryor  <jonpryor@vt.edu>

	* mph.h: Add fallback typedefs for blkcnt_t, blksize_t, suseconds_t so that
	  map.c can rely on their presence.  (Some versions of OS X don't provide
	  these typedefs.)

2006-10-27  Jonathan Pryor  <jonpryor@vt.edu>

	* map.c: Improve handling of [Flags] enumerations which mix bitfields and
	  non-bitfield values (i.e. FilePermissions and S_IFREG, which isn't a bit
	  field, along with a few other FilePermissions values).  Fixes #79161.

2006-10-26  Jonathan Pryor  <jonpryor@vt.edu>

	* map.c: Enclose structure conversion functions with HAVE_<<STRUCT NAME>>,
	  so that Unix-specific structures don't break the Win32 build.

2006-10-26  Jonathan Pryor  <jonpryor@vt.edu>

	* create-native-map.exe: Remove.  Just grab a new copy whenever we need to
	  refresh map.[ch].
	* Makefile.am: Remove `update-create-native-map' target, and just have the
	  `refresh' target grab the latest create-native-map.exe program.
	* map.c: Flush (remove fallback to <inttypes.h> constants).

2006-10-26  Jonathan Pryor  <jonpryor@vt.edu>

	* create-native-map.exe: Update; Adds support for integral limit fallback.
	* map.c: Flush (adds integral limits fallback, so that if G_MININT8 doesn't
	  exist we can fallback sanely instead of breaking the build).

2006-10-26  Jonathan Pryor  <jonpryor@vt.edu>

	* Makefile.am: Add "mph.h" to the generated code for map.c, so that
	  EOVERFLOW is defined on Win32.
	* map.c: Flush (adds #include "mph.h").

2006-10-25  Wade berrier  <wberrier@novell.com>

	* Makefile.am: remove map-icalls.h so make dist succeeds

2006-10-24  Jonathan Pryor  <jonpryor@vt.edu>

	* dirent.c, errno.c, fcntl.c, fstab.c, grp.c, macros.c, pwd.c, signal.c, 